# Bank

./: .gitignore  README.md  app.js  backup.js  changes.patch  charts.js  db.js  export.js  index.html  main.js  netlify.toml  package-lock.json  package.json  preload.js  reports.js  style.css  utils.js
.gh-pages/: charts.js  db.js  export.js  style.css  utils.js
.github/workflows/: build-tauri.yml  build-win.yml  gh-pages.yml  win-build.yml
electron/: main.js  preload.js
scripts/: afterPack.js
src-tauri/: Cargo.toml  tauri.conf.json
